Fix spacing bug in front page title

--- a/assets/stylesheets/viewports/_small.scss
+++ b/assets/stylesheets/viewports/_small.scss
@@ -7,7 +7,7 @@
 		$gutter: $page-margin*2;
 		margin-top: -10.2em;
 		margin-left: -$gutter;
-		margin-right: -$gutter;
+		margin-right: -$gutter / 2;
 		@include background(linear-gradient(transparent, rgba(#000, .7)));
 
 		.box {
